force-app/main/default/objects/ucinn_ascendv2__Bypass_Settings__c/ucinn_ascendv2__Bypass_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to Bypass Triggers, Process Builders, Workflow, and Validation Rules.</description>
    <label>Bypass Settings</label>
</CustomObject>