force-app/main/default/objects/ucinn_ascendv2__Bypass_Settings__c/fields/ucinn_ascendv2__Bypass_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Bypass_Process_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to Bypass all process builders and not execute them</description>
    <inlineHelpText>Check to Bypass process builders and not execute them</inlineHelpText>
    <label>Bypass Process Builders</label>
    <type>Checkbox</type>
</CustomField>