force-app/main/default/objects/ucinn_ascendv2__Bypass_Settings__c/fields/ucinn_ascendv2__Bypass_Triggers__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Bypass_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to Bypass all apex triggers and not execute them</description>
    <inlineHelpText>Check to Bypass triggers and not execute them</inlineHelpText>
    <label>Bypass Triggers</label>
    <type>Checkbox</type>
</CustomField>