force-app/main/default/objects/ucinn_ascendv2__Bypass_Settings__c/fields/ucinn_ascendv2__Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to Bypass all object validation rules and not execute them</description>
    <inlineHelpText>Check to Bypass validation rules and not execute them</inlineHelpText>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>