force-app/main/default/objects/ucinn_ascendv2__Bypass_Settings__c/fields/ucinn_ascendv2__Bypass_Workflows__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Bypass_Workflows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to Bypass all workflows and not execute them</description>
    <inlineHelpText>Check to Bypass workflows and not execute them</inlineHelpText>
    <label>Bypass Workflows</label>
    <type>Checkbox</type>
</CustomField>